<resources>
    <string name="app_name">LightweightCharts</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="screenshot">Screenshot</string>
    <string name="dollar">Dollar</string>
    <string name="pound">Pound</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>


    <string name="customizing">Customizing</string>
    <string name="chart_type">Chart Type</string>
    <string name="custom_themes">Custom Themes</string>
    <string name="no_attribution_logo">No attribution logo</string>
    <string name="range_switcher">Range Switcher</string>
    <string name="legend">Legend</string>
    <string name="series_compare">Series Compare</string>
    <string name="actions">Actions</string>
    <string name="timescale_actions">Timescale actions</string>
    <string name="pricescale_actions">Pricescale actions</string>
    <string name="custom_tooltips">Custom Tooltips</string>
    <string name="custom_formator">Custom Formator</string>
    <string name="price_scales">Price Scales</string>
    <string name="data">Data</string>
    <string name="indicators_and_markers">Indicators &amp; Markers</string>
    <string name="v5_panes_and_series">v5 Panes &amp; Series</string>
    <string name="v5_markers_and_watermarks">v5 Markers &amp; Watermarks</string>
    <string name="v5_scales_and_events">v5 Scales &amp; Events</string>
    <string name="v5_waiting_for_chart">Waiting for chart</string>
    <string name="v5_move_series">Move series</string>
    <string name="v5_series_order">Series order</string>
    <string name="v5_pane_size">Pane size</string>
    <string name="v5_pop">Pop</string>
    <string name="v5_toggle_markers">Markers</string>
    <string name="v5_marker_z_order">Z-order</string>
    <string name="v5_text_watermark">Text mark</string>
    <string name="v5_image_watermark">Image mark</string>
    <string name="v5_logical_range">Logical range</string>
    <string name="v5_price_range">Price range</string>
    <string name="v5_crosshair">Crosshair</string>
    <string name="v5_screenshot">Screenshot</string>

    <string name="additional">Additional</string>
    <string name="touch_delegate">Touch Delegate</string>
    <string name="candles">Candles</string>
    <string name="line">Line</string>
    <string name="bars">Bars</string>
    <string name="area">Area</string>
    <string name="colorful">Colorful</string>
    <string name="day1">1D</string>
    <string name="week1">1W</string>
    <string name="month1">1M</string>
    <string name="year1">1Y</string>
    <string name="realtime">Realtime</string>
    <string name="to_realtime">To Realtime</string>
    <string name="custom_1">Custom 1</string>
    <string name="custom_2">Custom 2</string>
    <string name="fit">Fit</string>
    <string name="reset">Rest</string>
    <string name="save_range">Save Range</string>
    <string name="restore_range">Restore range</string>
    <string name="intercept_touch">Intercept Touch</string>
    <string name="custom_options">Custom Options</string>
    <string name="right">Right</string>
    <string name="left">Left</string>

    <string name="linearly_scale">Linearly</string>
    <string name="logarithmic_scale">Logarithmic</string>
    <string name="percentage_scale">Percentage</string>
    <string name="indexedTo100_scale">IndexedTo100</string>
    <string name="autoscale">Autoscale</string>
    <string name="invert">Invert</string>
    <string name="align_labels">Align Labels</string>


</resources>
