<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.tradingview.lightweightcharts.example.app.view.DebugChartsView
        android:id="@+id/charts_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <com.google.android.material.chip.Chip
        android:id="@+id/chip_day"
        android:checkable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/day1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_week"
        android:checkable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/week1"
        app:layout_constraintBaseline_toBaselineOf="@id/chip_day"
        app:layout_constraintStart_toEndOf="@id/chip_day"
        />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_month"
        android:checkable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month1"
        app:layout_constraintBaseline_toBaselineOf="@id/chip_week"
        app:layout_constraintStart_toEndOf="@id/chip_week"
        />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_year"
        android:checkable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year1"
        app:layout_constraintBaseline_toBaselineOf="@id/chip_month"
        app:layout_constraintStart_toEndOf="@id/chip_month"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>