<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.tradingview.lightweightcharts.example.app.view.DebugChartsView
        android:id="@+id/charts_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <com.google.android.material.chip.Chip
        android:id="@+id/chip_switch_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <com.google.android.material.chip.Chip
        android:id="@+id/chip_pricescale_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linearly_scale"
        app:layout_constraintBaseline_toBaselineOf="@id/chip_switch_side"
        app:layout_constraintStart_toEndOf="@id/chip_switch_side"
        />




    <com.google.android.material.chip.Chip
        android:id="@+id/chip_autoscale"
        android:checkable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/autoscale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_switch_side"
        />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_invert"
        android:checkable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invert"
        app:layout_constraintBaseline_toBaselineOf="@id/chip_autoscale"
        app:layout_constraintStart_toEndOf="@id/chip_autoscale"
        />





</androidx.constraintlayout.widget.ConstraintLayout>